--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,20 @@ authors = [
 dependencies = [
   "tensorflow[and-cuda]>=2.12.0",
   "numpy>=1.26.3",
-  "pillow>=10.2.0",
   "opencv-python>=4.9.0.80",
+  "fire>=0.5.0",
 ]
-requires-python = ">=3.10"
+requires-python = ">=3.10,<3.12"
 readme = "README.md"
 license = { text = "MIT" }
 
 
-[tool.pdm]
-package-type = "application"
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+[tool.pdm.build]
+includes = ["weights/*.h5", "src/**/*.py"]
 
 [tool.pdm.dev-dependencies]
 dev = ["ipdb>=0.13.13"]
