Fixed issue with pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,14 @@ description = "DE-GAN made pip-installable, forked from official repo: https://g
 authors = [
   { name = "Federico Simonetta", email = "22996003+00sapo@users.noreply.github.com" },
 ]
-dependencies = ["tensorflow[and-cuda]", "opencv-python", "fire"]
-requires-python = ">=3.8,<3.12" # tensorflow not ready for 3.12 yet (tensorrt actually works up 3.11, but we cannot exclude it)
+requires-python = ">=3.9,<3.12" # tensorflow not ready for 3.12 yet (tensorrt actually works up 3.11, but we cannot exclude it)
 readme = "README.md"
 license = { text = "MIT" }
+dependencies = [
+    "tensorflow[and-cuda]>=2.14.1",
+    "opencv-python>=4.9.0.80",
+    "fire>=0.5.0",
+]
 
 [project.scripts]
 degan = "degan.cli:main"
