--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ requires-python = ">=3.9,<3.12" # tensorflow not ready for 3.12 yet (tensorrt ac
 readme = "README.md"
 license = { text = "MIT" }
 dependencies = [
-    "tensorflow[and-cuda]>=2.14.1",
+    "tensorflow>=2.15.0",
     "opencv-python>=4.9.0.80",
     "fire>=0.5.0",
 ]
